# bouncing-circles

./: Cargo.toml  Trunk.toml  index.html  readme.md
.github/workflows/: trunk.yaml
assets/: manifest.json  sw.js
src/: ball.rs  dot.rs  main.rs  ring.rs  simulation.rs
