[package]
name = "bouncing-circles"
version = "0.1.0"
authors = ["Zackary Semancik"]
edition = "2021"
rust-version = "1.65"

[dependencies]
egui = "0.30.0"
serde = { version = "1", features = ["derive"] }
eframe = { version = "0.30.0", default-features = false, features = [
    "default_fonts",
    "glow",
    # "accesskit",
    # "persistence",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "*"

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2